# dev

./: .gitignore  20-mins.txt  A-Hash.py  CBV.txt  DevOps  Dynamic-Programming.py  Git.txt  LINKS  PriorityRandom.py  SRVSSS-data(form)-transfer-protocol  Specific.txt  Supporting Multiple Languages in Django.txt  Test.ipynb  Test.py  ThrottleMiddleware.py  Twitter-X_clean-up  __init__.py  async.py  chess_cli.py  clean-value.py  clean_validate_django_drf.txt  digikala-records-dataset.txt  dir.py  django-model-to-html.py  django-useful-packages.txt  django_helper.py  django_model_relations.py  heap_queue.py  helper.py  home.html  jquery-django-bootstrap-modal-forms.js  mongo_model.py  n_percent_around.py  pre_installed_for_vps.sh  rtyrtyrt  static-files-in-django.txt  style.css  sweetcrushfinderideas.text.txt  telegram-bot-for-download-mp3-and-mp4-from-youtube.py  telegram-bot-for-download-mp3-from-youtube.py  (+2 more)
150K-Salary/: v1  v2
DjangoORM/: app.py  (+1 more)
projvar_blog/: .editorconfig  .flake8  .pre-commit-config.yaml  Dockerfile  Makefile  PROJECT - VARIANTS.txt  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
projvar_blog/.github/workflows/: master.yml  pull_request_quality_assurance.yml
projvar_blog/project/: conftest.py
projvar_blog/project/accounts/managers/: account.py
projvar_blog/project/accounts/models/: account.py
projvar_blog/project/core/: __init__.py  celery.py  urls.py
projvar_blog/project/core/settings/: __init__.py  base.py  celery.py
projvar_blog/project/general/: managers.py  tasks.py
projvar_blog/scripts/: entrypoint.sh
(+417 files in other folders)
